typescript/checker/tests/conformance/Symbols/ES5SymbolProperty5.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            20,
        ),
        hi: BytePos(
            26,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/Symbols/ES5SymbolProperty5.ts:2:5
  |
2 | var Symbol: { iterator: symbol };
  |     ^^^^^^

